@@ -1,4 +1,7 @@
-2024-08-21  Michael Albinus  <michael.albinus@gmx.de>
+2024-10-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el: Use `when-let*', `if-let*' and `and-let*'
+	consequently.  (Bug#73441)
 
 	* tramp-tests.el (tramp--test-deftest-direct-async-process):
 	Skip when underlying TEST has taken too much time.
